El h1:NISA fue eliminado.El carousel ahora se encuentra visible en modo responsive.Seccion de ofertas imperdibles se encuentra correctamente centralizado

--- a/estilo/estilo.css
+++ b/estilo/estilo.css
@@ -229,8 +229,8 @@ border-radius: 100%;
   width: 74%;
   height: auto;
   background-color: white;
-  margin-top: 2%;
-  margin-left: 10%;
+  margin: auto;
+  margin-top: 10px;
   border: solid 0.5em #b4b0b0;
   border-style:groove;
   display:flex;
